--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: rgb(187, 187, 0);
+}
+h1 {
+    color: rgb(1, 78, 78);
+}
+
+h2 {
+    color: rgb(92, 15, 15);
+}
